[package]
name = "desktop-postflop"
version = "0.1.7"
authors = ["Wataru Inariba"]
edition = "2021"
rust-version = "1.59"
repository = "https://github.com/b-inary/desktop-postflop/tree/main/src-tauri"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc"] }
rayon = "1.6.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sysinfo = "0.26.8"
tauri = { version = "1.2.1", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
