[package]
name = "desktop-postflop"
version = "0.2.0"
description = "The most advanced open-source GTO solver"
authors = ["Wataru Inariba"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/b-inary/desktop-postflop/tree/main/src-tauri"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["dialog-save", "fs-write-file", "shell-open"] }
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["custom-alloc"] }
rayon = "1.6.1"
sysinfo = "0.27.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
